# ai-sprite-studio

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml  upstream-lock.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-ai-sprite-studio.md
docs/superpowers/workflows/: ai-sprite-studio-goal.md
scripts/: sync_upstreams.py  video_to_frames.py
src/ai_sprite_studio/: __init__.py  api.py  app.py  cli.py  contracts.py  curator.py  imaging.py  jobs.py  pipeline.py  project_store.py  prompts.py  sprite_engine.py
src/ai_sprite_studio/assets/: curator-studio.css  curator-studio.html  curator-studio.js  curator-suite.js  landing.html  landing.js  studio.css  theme.js
tests/: test_api.py  test_cli.py  test_contracts.py  test_curator.py  test_imaging_normalize.py  test_jobs.py  test_pipeline.py  test_project_store.py  test_prompts.py  test_sprite_engine.py  test_ui_smoke.py  test_upstream_assets.py
