[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sprite-studio"
version = "0.1.0"
description = "Local workflow for reproducible pixel-art sprite generation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "imageio-ffmpeg",
    "mcp",
    "openai",
    "pillow>=12,<13",
    "pydantic",
    "sprite-gen",
    "starlette",
    "uvicorn",
]

[dependency-groups]
dev = [
    "playwright",
    "pytest",
    "pytest-asyncio",
    "pytest-playwright",
    "ruff",
]

[tool.uv.sources]
sprite-gen = { git = "https://github.com/aldegad/sprite-gen.git", rev = "606db6d89beedace80863374859752739369ba19" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_sprite_studio = ["assets/upstream/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
